--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.18.0",
+    "@mui/material": "^6.1.0",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
